...
                        Spacer()
                    }.padding(.bottom)

                    HStack {
                        NavigationLink("Don't have an account?", destination: SignUpView(isSignedIn: $isSignedIn))
                            .font(.subheadline.bold())
                            .accessibilityIdentifier("go-to-signup")
                        Spacer()
                    }.padding(.bottom)

                    Spacer()

                    Button("Sign in") {
...
